[tool.poetry]
name = "chatgpt-slack"
version = "0.1.0"
description = ""
authors = ["Lee Tang <i@d0zingcat.dev>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9.0"
openai = "0.27.0"
slack-bolt = "^1.16.1"
tiktoken = "^0.2.0"
redis = "^4.5.1"
sentry-sdk = "^1.16.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
